# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/know"]
resolver = "2"

[workspace.package]
version = "0.0.6"
authors = ["Haltia.AI <support@haltia.ai>"]
edition = "2021"
rust-version = "1.70"
description = "The Know Framework for Rust"
documentation = "https://github.com/HaltiaAI/know.rs/blob/master/README.md"
readme = true
homepage = "https://know.dev"
repository = "https://github.com/HaltiaAI/know.rs"
license = "Unlicense"
keywords = []
categories = []
publish = true

[workspace.dependencies]
know = { path = "lib/know" }
serde = { version = "1.0", features = ["derive"] }
