[package]
name = "know"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
thiserror = "1.0.50"
serde = { version = "1.0", features = ["derive"], optional = true }
zerocopy = "0.7.11"
zerocopy-derive = "0.7.11"
zeroize = "1.6.0"
